[project]
name = "rl_state_tester"
version = "0.0.1"
authors = [
  { name="CryyStall", email="author@example.com" },
]
description = "This package allows you to harvest data from an rlgym_sim environment and use them to test your rewards or state in a given configuration"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MathieuSuchet/rl-state-tester"
"Bug Tracker" = "https://github.com/MathieuSuchet/rl-state-tester/issues"